feat(bookmarks): add reset to filter

--- a/src/app/bookmarks/bookmarks.component.html
+++ b/src/app/bookmarks/bookmarks.component.html
@@ -1,16 +1,25 @@
 <div class="search">
 	<div class="input-group">
-		<input class="form-control" type="text" [(ngModel)]="search" placeholder="Search">
+		<input class="form-control" type="text" placeholder="Search"
+			   [(ngModel)]="search"
+			   (keyup)="onKeyUpOnSearch($event)">
+		<div class="input-group-append">
+			<span class="input-group-text">
+				<input type="checkbox" aria-label="Activate reset keys" id="should-reset-search"
+					   [(ngModel)]="shouldResetSearch">
+				<span>Activate reset</span>
+			</span>
+		</div>
 	</div>
 </div>
 <div class="bookmarks">
 	<div class="row">
 		<div class="col-4"
-			 *ngFor="let group of filterGroup(groups, search)">
+			 *ngFor="let group of filteredGroups">
 			<div class="card">
 				<div class="card-header">{{group.title}}</div>
 				<ul class="list-group list-group-flush">
-					<li class="list-group-item" *ngFor="let bookmark of group.bookmarks">
+					<li class="list-group-item" *ngFor="let bookmark of group.bookmarks" (click)="clickOnBookmark()">
 						<a [href]="bookmark.url">{{bookmark.text}}</a>
 					</li>
 				</ul>
